--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "expo": "~51.0.22",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -33,11 +34,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-pager-view": "6.3.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -45,6 +49,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
+    "sweetalert2": "^11.14.3",
     "vanhaiapp": "file:"
   },
   "devDependencies": {
