--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
     "sweetalert2": "^11.14.3",
     "vanhaiapp": "file:"
   },
